--- a/app/views/urls/new.html.erb
+++ b/app/views/urls/new.html.erb
@@ -1,2 +1,7 @@
-<h1>Urls#new</h1>
-<p>Find me in app/views/urls/new.html.erb</p>
+<h1>Shorten the URL</h1>
+
+<%= form_for @url do |f| %>
+  <%= f.text_field :original %>
+  <%= f.submit "Shorten!"%>
+<%- end -%>
+
