--- a/app/views/urls/_form.html.erb
+++ b/app/views/urls/_form.html.erb
@@ -1,10 +1,11 @@
 <%= form_for url, remote: true do |f| %>
   <div class="form-group">
     <div class="input-group">
-      <span class="input-group-addon form-addon">http://</span>
-      <%= f.text_field :original, :class => "input-lg col-sm-12", :placeholder => "Enter URL here..." %>
+      <span class="input-group-addon form-addon no-b">http://</span>
+      <%= f.text_field :original, :class => "input-lg col-sm-12 no-b-radius no-b", :placeholder => "Enter URL here...", :id => "shortener-field" %>
       <span class="input-group-btn">
-        <%= f.submit "Shorten!", :class => "btn btn-success btn-lg" %>
+        <%= f.submit "Shorten!", :class => "form-button no-b btn btn-success btn-lg", :id => "shorten"%>
+        <button class="form-button no-b btn btn-warning btn-lg hide" id="copy" type="copy">Copy!</button>
       </span>
     </div>
   </div>
