--- a/app/views/urls/_top100.html.erb
+++ b/app/views/urls/_top100.html.erb
@@ -1,1 +1,6 @@
-<li><%= url.original %> | <%= shortened_full(url) %> | <%= url.views %></li>
+<tr>
+  <td><%= url_counter + 1 %></td>
+  <td><%= url.original %></td>
+  <td><%= shortened_full(url) %></td>
+  <td><%= url.views %></td>
+</tr>
