--- a/app/views/urls/create.js.erb
+++ b/app/views/urls/create.js.erb
@@ -1,1 +1,2 @@
-$("#shortened_url").html("<%= shortened_full(@url) %>")
+newLink("<%= j shortened_no_protocal(@url) %>");
+refreshTop100("<%= j render partial: 'urls/top100', collection: @urls, as: :url  %>");
