--- a/app/views/urls/new.html.erb
+++ b/app/views/urls/new.html.erb
@@ -1,8 +1,8 @@
 <div class="shorten-background">
   <div class="container vertical-center">
     <div class="center" id="shorten-form">
-      <div class="title">
-        <h1>Shorten the URL</h1>
+      <div class="title" id="shorten-title">
+        <h1>That URL is a 10!</h1>
       </div>
       <div class="form">
         <%= render 'urls/form', url: @url %>
