--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-inverse no-b-radius">
+<nav class="navbar navbar-default no-b-radius">
   <div class="container-fluid">
     <div class="navbar-header">
-      <%= link_to "Shawty // A URL shortner", root_path, :class => "navbar-brand" %>
+      <%= link_to "Shorty // A URL shortner", root_path, :class => "navbar-brand" %>
     </div>
   </div>
 </nav>
