--- a/app/views/urls/new.html.erb
+++ b/app/views/urls/new.html.erb
@@ -2,7 +2,7 @@
   <div class="container vertical-center">
     <div class="center" id="shorten-form">
       <div class="title" id="shorten-title">
-        <h1>That URL is a 10!</h1>
+        <h1>Enter stuff here, watch magic happen</h1>
       </div>
       <div class="form">
         <%= render 'urls/form', url: @url %>
@@ -14,7 +14,7 @@
 <div class="ranking-background">
   <div class="container">
     <div id="top-100">
-      <div class="title center">
+      <div class="title center" id="ranking-title">
         <h2>Top 100 URLs</h2>
       </div>
       <table class="table table-striped table-hover ">
